# linkml-qudt

./: .gitignore  404.html  LICENSE  README.md  index.html  justfile  main.py  mkdocs.yml  pyproject.toml  sitemap.xml
.devcontainer/: devcontainer.json  env_setup.sh
about/: index.html
datadict/: datadict.md  index.html
docs/: about.md  datadict.md  images  index.md  schema.md
docs/schema/: linkml_qudt.yaml
docs/stylesheets/: extra.css
javascripts/: mathjax.js
original/: qudt.ofn  qudt.ttl
project/: datadict.md
project/jsonld/: linkml_qudt.context.jsonld  linkml_qudt.jsonld
project/jsonschema/: linkml_qudt.schema.json
project/owl/: linkml_qudt.owl.ttl
project/prefixmap/: linkml_qudt.yaml
project/protobuf/: linkml_qudt.proto
project/shacl/: linkml_qudt.shacl.ttl
project/shex/: linkml_qudt.shex
project/typescript/: linkml_qudt.ts
schema/: index.html
search/: search_index.json
src/linkml_qudt/datamodel/: linkml_qudt.py  linkml_qudt_pydantic.py
src/linkml_qudt/schema/: linkml_qudt.yaml
